--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.33.2",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "3.4.1",
