--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "react": "^16.13.1",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "3.4.1",
+    "react-toastify": "^8.2.0",
     "socket.io": "^4.4.1",
     "universal-cookie": "^4.0.4"
   },
