--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,18 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.33.2",
-    "react": "^16.13.1",
+    "bootstrap": "^5.1.3",
+    "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.0.0",
     "react-hot-toast": "^2.2.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^8.2.0",
+    "redux": "^4.1.2",
     "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7"
   }
 }
