--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "moment": "^2.29.1",
     "mongoose": "^6.1.5",
+    "mqtt": "^4.3.7",
     "socket.io": "^4.4.1"
   }
 }
