--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.33.2",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "chartjs-adapter-luxon": "^1.1.0",
+    "chartjs-plugin-streaming": "^2.0.0",
+    "luxon": "^2.3.1",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.2.0",
     "react-redux": "^7.2.6",
